# AkieMusicPlay

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  starts.bat
cmake/: CPM.cmake  ide.cmake  source_file.cmake
include/: CMakeLists.txt
include/hello/: hello.h
include/test/: hello.h
sample/: main.cpp
source/: CMakeLists.txt
source/MainPage/: mainWidget.cpp  mainWidget.h  mainWidget.ui
source/music/: help.cpp  help.h
